# gcz

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  release.yml  test.yml
src/: main.rs
